--- a/templates/listing-video.html.twig
+++ b/templates/listing-video.html.twig
@@ -2,10 +2,9 @@
 
 {% block content %}
     {{ page.content }}
-    {#{ dump(config.plugins.cloudinary.list) }#}
     <div class="grid">
     {% for v in config.plugins.cloudinary.list %}
-    <a href="{{ v.url }}"><img src="{{ v.url_img }}" alt="Vorschaubild {{ v.title }}">{{ v.title }}</a>
+    <a href="{{ v.url }}"><img src="{{ v.url_img }}" alt="{{ t("PLUGIN_CLOUDINARY.ALT_PREFIX") }} {{ v.title }}">{{ v.title }}</a>
     {% endfor %}
     </div>
 {% endblock %}
