--- a/templates/cloudinary-video.html.twig
+++ b/templates/cloudinary-video.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h1>{{ page.title }}</h1>
-  {{ config.plugins.cloudinary.video }}
+  {#{ config.plugins.cloudinary.video }#}
+  {{ cl_video() }}
   {{ page.content }}
 {% endblock %}
