--- a/templates/cloudinary-video.html.twig
+++ b/templates/cloudinary-video.html.twig
@@ -3,6 +3,6 @@
 {% block content %}
   <h1>{{ page.title }}</h1>
   {#{ config.plugins.cloudinary.video }#}
-  {{ cl_video() }}
+  {{ cl_tag('video', page.header.public_id, page.header.options) }}
   {{ page.content }}
 {% endblock %}
