--- a/templates/cloudinary-image.html.twig
+++ b/templates/cloudinary-image.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
   <h1>{{ page.title }}</h1>
-  {{ config.plugins.cloudinary.image }}
+  {{ cl_tag('image', page.header.public_id, page.header.options) }}
   {{ page.content }}
 {% endblock %}
