--- a/templates/forms/fields/cl-file/cl-file.html.twig
+++ b/templates/forms/fields/cl-file/cl-file.html.twig
@@ -23,6 +23,7 @@
             <img src="{{ cl_url('thumbnail', data.header.public_id, thumb_options) }}" alt="Vorschau">
         </div>
     {% endif %}
+    <button id="upload_widget" class="cloudinary-button">Upload files</button>
 {% endblock %}
 
 {% block input %}
@@ -30,4 +31,21 @@
     {% set field = field|merge({'wrapper_classes': 'form-input-addon-wrapper'}) %}
 {% endif %}
 {{ parent() }}
+
+{% do assets.addJs('https://widget.cloudinary.com/v2.0/global/all.js', 101) %}
+{% do assets.addInlineJs("
+var myWidget = cloudinary.createUploadWidget({
+  cloudName: 'netzhexe',
+  uploadPreset: 'my_preset'}, (error, result) => {
+    if (!error && result && result.event === 'success') {
+      console.log('Done! Here is the image info: ', result.info);
+    }
+  }
+)
+
+document.getElementById('upload_widget').addEventListener('click', function(){
+    myWidget.open();
+  }, false);
+
+", {'group': 'bottom'}) %}
 {% endblock %}
